feat: Trip Search API with multiple trip's attributes, route's origin and destination, bus's model and amenities (Tested). Update seeding method to using 10 real stops in HCM city for testing.
